animated line gap fix

--- a/src/shared/animated-line/animated-line.module.scss
+++ b/src/shared/animated-line/animated-line.module.scss
@@ -112,6 +112,8 @@
 
     @media (max-width: 764px) {
         font-size: 4vw;
+        gap: 15vw;
+        padding: 0 15vw 0 0;
 
         & > span {
             &:nth-child(4n)::before {
